; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/extr_nf_conntrack_helper.c_nf_ct_helper_ext_add.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/extr_nf_conntrack_helper.c_nf_ct_helper_ext_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nf_conn_help = type { i32 }
%struct.nf_conn = type { i32 }

@NF_CT_EXT_HELPER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"failed to add helper extension area\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.nf_conn_help* @nf_ct_helper_ext_add(%struct.nf_conn* %0, i32 %1) #0 {
  %3 = alloca %struct.nf_conn*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.nf_conn_help*, align 8
  store %struct.nf_conn* %0, %struct.nf_conn** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.nf_conn*, %struct.nf_conn** %3, align 8
  %7 = load i32, i32* @NF_CT_EXT_HELPER, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.nf_conn_help* @nf_ct_ext_add(%struct.nf_conn* %6, i32 %7, i32 %8)
  store %struct.nf_conn_help* %9, %struct.nf_conn_help** %5, align 8
  %10 = load %struct.nf_conn_help*, %struct.nf_conn_help** %5, align 8
  %11 = icmp ne %struct.nf_conn_help* %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load %struct.nf_conn_help*, %struct.nf_conn_help** %5, align 8
  %14 = getelementptr inbounds %struct.nf_conn_help, %struct.nf_conn_help* %13, i32 0, i32 0
  %15 = call i32 @INIT_HLIST_HEAD(i32* %14)
  br label %18

16:                                               ; preds = %2
  %17 = call i32 @pr_debug(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  br label %18

18:                                               ; preds = %16, %12
  %19 = load %struct.nf_conn_help*, %struct.nf_conn_help** %5, align 8
  ret %struct.nf_conn_help* %19
}

declare dso_local %struct.nf_conn_help* @nf_ct_ext_add(%struct.nf_conn*, i32, i32) #1

declare dso_local i32 @INIT_HLIST_HEAD(i32*) #1

declare dso_local i32 @pr_debug(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
